@@ -9,6 +9,8 @@ x.x.x (XX-XX-XXXX)
 
 - Implement `ClientSession.close()` method
 
+- Implement `connector.closed` readonly property
+
 
 0.15.3 (04-22-2015)
 -------------------
